@@ -46,6 +46,7 @@ struct _EggCellRendererKeys
 {
   GtkCellRendererText parent;
   guint accel_key;
+  guint keycode;
   EggVirtualModifierType accel_mask;
   GtkWidget *edit_widget;
   GtkWidget *grab_widget;
@@ -58,11 +59,14 @@ struct _EggCellRendererKeysClass
 {
   GtkCellRendererTextClass parent_class;
 
-  void (* keys_edited) (EggCellRendererKeys    *keys,
-                        const char             *path_string,
-                        guint                   keyval,
-                        EggVirtualModifierType  mask,
-			guint                   hardware_keycode);
+  void (* accel_edited) (EggCellRendererKeys    *keys,
+			 const char             *path_string,
+			 guint                   keyval,
+			 EggVirtualModifierType  mask,
+			 guint                   hardware_keycode);
+
+  void (* accel_cleared) (EggCellRendererKeys    *keys,
+			  const char             *path_string);
 };
 
 GType            egg_cell_renderer_keys_get_type        (void);
@@ -70,6 +74,7 @@ GtkCellRenderer *egg_cell_renderer_keys_new             (void);
 
 void             egg_cell_renderer_keys_set_accelerator (EggCellRendererKeys     *keys,
 							 guint                    keyval,
+							 guint                    keycode,
 							 EggVirtualModifierType   mask);
 void             egg_cell_renderer_keys_get_accelerator (EggCellRendererKeys     *keys,
 							 guint                   *keyval,
